--- a/index.html
+++ b/index.html
@@ -4,10 +4,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="left">
+            <div class="logo">
+              LOGO
+            </div>
+          </div>
+          <div class="right">
+            <ul class="links">
+                <li><a href="">Home</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">About</a></li>
+            </ul>
+          </div>
+    </div>
+
+    <div class="introduction">
+        <div class="intro-right">
+            <h1>Welcome to My Empire</h1>
+            <p>this is my awesome website , there where i train on css and html</p>
+            <button class="sign-up">Sing up</button>
+        </div>
+        <img src="/images/intro.webp" width="500" height="250"/>
+    </div>
+
+    <div class="body">
+        <h2>Some Random Information</h2>
+        <div class="cards">
+            <div class="card">
+                <img src="/images/card1.jpeg" width="145" height="155"/>
+                <p></p>
+            </div>
+            <div class="card">
+                <img src="/images/card2.webp" width="145" height="155"/>
+                <p>nothing to read</p>
+            </div>
+            <div class="card">
+                <img src="/images/card3.jpeg" width="145" height="155"/>
+                <p>nothing to read</p>
+            </div>
+            <div class="card">
+                <img src="/images/card4.webp" width="145" height="155"/>
+                <p>nothing to read</p>
+            </div>
+        </div>
+        <div class="qoute">
+            <p>Never give up because you never know if the next try is going to be the one that works.</p>
+              <div class="author">
+                <span>__</span>
+                <strong class="name">Mary Kay Ash</strong>
+            </div>
+        </div>
+
+        <div class="advertising">
+            <div class="banner">
+                <div>
+                    <h3>Get with us</h3>
+                    <p>
+                        We handle the busy work, so you can enjoy the moments. Easily create free online Signup sheets, 
+                        manage volunteer scheduling, and more!
+                    </p>
+                </div>
+                <button class="sign-up">Sing up</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Copyright © Ismael developer</p>
+    </div>
+
 </body>
 </html>
