--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="intro-right">
             <h1>Welcome to My Empire</h1>
             <p>this is my awesome website , there where i train on css and html</p>
-            <button class="sign-up">Sing up</button>
+            <button class="sign-up">Sign up</button>
         </div>
-        <img src="/images/intro.webp" width="500" height="250"/>
+        <img src="/images/intro.webp" width="500" height="275"/>
     </div>
 
     <div class="body">
@@ -69,7 +69,7 @@
                         manage volunteer scheduling, and more!
                     </p>
                 </div>
-                <button class="sign-up">Sing up</button>
+                <button class="sign-up">Sign up</button>
             </div>
         </div>
     </div>
