doing half style of cards

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="cards">
             <div class="card">
                 <img src="/images/card1.jpeg" width="145" height="155"/>
-                <p></p>
+                <p>nothing to read</p>
             </div>
             <div class="card">
                 <img src="/images/card2.webp" width="145" height="155"/>
