finish style of cards

--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
             <p>this is my awesome website , there where i train on css and html</p>
             <button class="sign-up">Sign up</button>
         </div>
-        <img src="/images/intro.webp" width="500" height="275"/>
+        <img src="./images/intro.webp" width="500" height="275"/>
     </div>
 
     <div class="body">
         <h2>Some Random Information</h2>
         <div class="cards">
             <div class="card">
-                <img src="/images/card1.jpeg" width="145" height="155"/>
+                <img src="./images/card1.jpeg" width="145" height="155"/>
                 <p>nothing to read</p>
             </div>
             <div class="card">
-                <img src="/images/card2.webp" width="145" height="155"/>
+                <img src="./images/card2.webp" width="145" height="155"/>
                 <p>nothing to read</p>
             </div>
             <div class="card">
-                <img src="/images/card3.jpeg" width="145" height="155"/>
+                <img src="./images/card3.jpeg" width="145" height="155"/>
                 <p>nothing to read</p>
             </div>
             <div class="card">
-                <img src="/images/card4.webp" width="145" height="155"/>
+                <img src="./images/card4.webp" width="145" height="155"/>
                 <p>nothing to read</p>
             </div>
         </div>
