styles quote section

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                 <p>nothing to read</p>
             </div>
         </div>
-        <div class="qoute">
+        <div class="quote">
             <p>Never give up because you never know if the next try is going to be the one that works.</p>
               <div class="author">
-                <span>__</span>
                 <strong class="name">Mary Kay Ash</strong>
+                <span>--</span>
             </div>
         </div>
 
