--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div>
                     <h3>Get with us</h3>
                     <p>
-                        We handle the busy work, so you can enjoy the moments. Easily create free online Signup sheets, 
+                        Easily create free online Signup sheets, 
                         manage volunteer scheduling, and more!
                     </p>
                 </div>
