edit some text on site

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="introduction">
         <div class="intro-right">
-            <h1>Welcome to My Empire</h1>
+            <h1>Welcome to My Site</h1>
             <p>this is my awesome website , there where i train on css and html</p>
             <button class="sign-up">Sign up</button>
         </div>
@@ -53,9 +53,10 @@
             </div>
         </div>
         <div class="quote">
-            <p>Never give up because you never know if the next try is going to be the one that works.</p>
+            <p>It was narrated from ’Umar that Jibreel said to the Prophet ﷺ:
+                What is faith (eeman)? He said:“To believe in Allah, His Angels, His Books, His Messengers, the Last Day and the divine decree, both good and bad,” Jibreel said to him: You have spoken the truth. He said: We were amazed that he asked him and then confirmed his answers as being correct. The Prophet ﷺ said: “That was Jībreel, who came to teach you your religion`</p>
               <div class="author">
-                <strong class="name">Mary Kay Ash</strong>
+                <strong class="name">Prophet Mohammed ﷺ</strong>
                 <span>--</span>
             </div>
         </div>
